--- a/Login.html
+++ b/Login.html
@@ -16,7 +16,7 @@
   <div class="container">
     <div class="row justify-content-center">
         <div class="form-group col-md-4 col-md-offset-4 align-center">
-            <h2>Login to your Acccount</h2>
+            <h2>Login to Acccount</h2>
             <form>
                 <div class="form-group">
                     <label for="email">Email:</label>
