--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="nav-left">
         <div id="nav-logo">
           <a href="#" class="nav-logo-link"></a>
-          <a href="#" class="nav-logo-tagline">By 18R01A05C6(CSE)</a>
+          <a href="#" class="nav-logo-tagline">By 18R01A05E1(CSE)</a>
         </div>
       </div>
       <div class="nav-right">
